# apis/rest/openapi.yml
@@ -197,6 +197,25 @@ paths:
           $ref: './shared.yml#/components/responses/ErrorResponse'
 
   /v1/products/{productId}/reviews/{productReviewId}:
+    get:
+      operationId: get-product-review
+      summary: Get product review
+      description: Get product review
+      tags:
+        - Product reviews
+      parameters:
+        - $ref: './products.yml#/components/parameters/productIdPath'
+        - $ref: './product-reviews.yml#/components/parameters/productReviewIdPath'
+      responses:
+        '200':
+          description: Ok
+          content:
+            application/json:
+              schema:
+                $ref: './product-reviews.yml#/components/schemas/ProductReview'
+        default:
+          $ref: './shared.yml#/components/responses/ErrorResponse'
+
     put:
       operationId: update-product-review
       summary: Update product review
@@ -206,6 +225,12 @@ paths:
       parameters:
         - $ref: './products.yml#/components/parameters/productIdPath'
         - $ref: './product-reviews.yml#/components/parameters/productReviewIdPath'
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: './product-reviews.yml#/components/schemas/UpdateProductReviewInput'
       responses:
         '200':
           description: Ok
