# code/app/src/main/java/com/jeferro/products/product_reviews/domain/exceptions/ForbiddenOperationInProductReviewException.java
@@ -1,6 +1,6 @@
 package com.jeferro.products.product_reviews.domain.exceptions;
 
-import com.jeferro.products.product_reviews.domain.models.ProductReviewId;
+import com.jeferro.products.product_reviews.domain.models.ProductReview;
 import com.jeferro.products.products.domain.models.ProductId;
 import com.jeferro.products.shared.domain.exceptions.NotFoundException;
 import com.jeferro.products.shared.domain.models.auth.Auth;
@@ -11,11 +11,11 @@ public class ForbiddenOperationInProductReviewException extends NotFoundExceptio
 	super(message);
   }
 
-  public static ForbiddenOperationInProductReviewException belongsToOtherUser(ProductReviewId productReviewId, Auth auth) {
-	return new ForbiddenOperationInProductReviewException("Product review " + productReviewId + " don't belong to auth " + auth);
+  public static ForbiddenOperationInProductReviewException belongsToOtherUser(ProductReview productReview, Auth auth) {
+	return new ForbiddenOperationInProductReviewException("Product review " + productReview.getId() + " don't belong to auth " + auth);
   }
 
-  public static ForbiddenOperationInProductReviewException belongsToOtherProduct(ProductReviewId productReviewId, ProductId productId) {
-	return new ForbiddenOperationInProductReviewException("Product review " + productReviewId + " don't belong to product " + productId);
+  public static ForbiddenOperationInProductReviewException belongsToOtherProduct(ProductReview productReview, ProductId productId) {
+	return new ForbiddenOperationInProductReviewException("Product review " + productReview.getId() + " don't belong to product " + productId);
   }
 }
